# Production-MailGuard-API

./: Dockerfile  README.md  compose.yaml  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
app/: app.py  schemas.py  utility.py
artifacts/: vectorizer.joblib
expirements/: .gitignore
src/: data_ingestion.py  data_preprocessing.py  feature_engineering.py  model_building.py  model_evaluation.py  utils.py
